# voxels

./: .dockerignore  .env.cloudflare.local.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile.world-service  README.md  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  fly.toml  index.html  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.json  vite.config.test.ts  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
automation/: cli.ts
automation/lib/: arguments.test.ts  arguments.ts  artifacts.test.ts  artifacts.ts  browser.test.ts  browser.ts  criterion.ts  engine.test.ts  engine.ts  image.ts  metrics.test.ts  metrics.ts  network-compare.test.ts  network-compare.ts  network.test.ts  network.ts  process.test.ts  process.ts  protocol.test.ts  protocol.ts  render-metrics.test.ts  render-metrics.ts  scenario.test.ts  scenario.ts  vitest.test.ts  vitest.ts  world.test.ts  world.ts
bots/: Cargo.toml
bots/src/: behavior.rs  cache.rs  client.rs  lib.rs  main.rs  run.rs
client-config/: Cargo.toml
cloudflare/: session.test.ts  session.ts  worker.test.ts  worker.ts
config/: client.production.toml  client.toml  world-service.production.toml  world-service.toml
core/: Cargo.toml
core/benches/: simulation.rs
core/src/: lib.rs  presence.rs  profile.rs
docs/: 20260311-biome-tech.md  20260311-biomes.md  20260311-bun-hmr-research.md  20260311-voxel-perf-research.md  20260311-voxel-research.md  20260713-local-world-service-phase1-followup.md  20260713-local-world-service-plan.md  20260717-1000-player-traffic-report.md  20260717-adaptive-backpressure-report.md  20260717-bot-load-report.md  20260717-projected-error-feature-lod.md  20260719-server-pressure-report.md  20260720-world-edit-data-plane.md  20260722-fast-travel-streaming-study.md  agent-playbook.md  architecture.md  automation.md  configuration.md  deployment.md  multiplayer-scaling.md  native-world-streaming.md  network-benchmark.md  performance.md  roadmap.md  terrain-diffusion-metal.md  testing.md  world-service-config.md
public/: styles.css
render/: Cargo.toml  OFL.txt
render/src/: ambient_occlusion.rs  arena.rs  avatar.rs  clouds.rs  environment.rs  lib.rs  lod.rs  material_detail.rs  renderer.rs  shader.rs  shadow.rs  ui.rs  ui_gpu.rs
render/src/shaders/: ambient_occlusion.wgsl  avatar.wgsl  avatar_shadow.wgsl  clouds.wgsl  frame.wgsl  pbr.wgsl  shadow.wgsl  sky.wgsl  ui_glass.wgsl  ui_present.wgsl  voxels.wgsl  weather.wgsl
runtime/: Cargo.toml
scripts/: analyze-chrome-trace.ts  analyze-screenshot-composition.ts  bench-core.ts  bench-runtime.ts  bench-world.ts  bot-load-test.mjs  browser-harness.mjs  browser-harness.test.mjs  browser-lod-transition.mjs  browser-multiplayer.mjs  browser-network-benchmark.mjs  browser-performance.mjs  browser-persistence-recovery-test.mjs  browser-persistence-test.mjs  browser-weather-motion.mjs  browser-world-fixture.mjs  browser-world-fixture.test.mjs  browser-world-lab.mjs  build-wasm.test.ts  build-wasm.ts  build.ts  capture-lod-screenshot.ts  capture-lod-video.mjs  capture-view-atlas.ts  cf-env.mjs  check-rust.ts  check-versions.ts  child-process-exit.mjs  compare-terrain-lighting.mjs  diagnose-lod-coverage.ts  harness-metrics.mjs  harness-metrics.test.mjs  network-benchmark-compare.mjs  network-benchmark-compare.test.mjs  network-benchmark-link.mjs  network-benchmark-link.test.mjs  object-lab.ts  owned-browser-lab.ts  profile-game-stream.ts  profile-lod-cache-reuse.ts  (+21 more)
shell/: Cargo.toml
shell/src/: lib.rs  persist.rs  presence_remote.rs  remote.rs  request_window.rs
src/: server.ts
tests/: ambient-environment.test.ts  async-chunk-generation.test.ts  benchmark-metrics.test.ts  bestiary-journal.test.ts  browser-game-benchmark-harness.test.ts  camera.test.ts  canonical-chunk-store.test.ts  cave-traversal.test.ts  chunk-edit-journal.test.ts  derived-lod-chunk-codec.test.ts  discovery-catalog.test.ts  exploration-events.test.ts  exploration-interactions.test.ts  exploration-journal.test.ts  exploration-objectives.test.ts  exploration-skill-effects.test.ts  field-kit.test.ts  first-person-camera.test.ts  forage-sites.test.ts  frame-attribution.test.ts  frame-timing-buckets.test.ts  game-bootstrap-benchmark.test.ts  game-route-benchmark.test.ts  generated-chunk-codec.test.ts  generated-chunk-render-summary.test.ts  generated-chunk-transfer.test.ts  generated-render-column-summary.test.ts  generated-render-summary-region.test.ts  hotbar-layout.test.ts  interaction-loop.test.ts  interaction-skill-gates.test.ts  inventory.test.ts  lod-chunk-derivation.test.ts  lod-clip-mask.test.ts  lod-debug-world.test.ts  lod-handoff.test.ts  lod-system.test.ts  loot-journal.test.ts  mesher.test.ts  navigation-bearing.test.ts  (+39 more)
web/: automation.test.ts  automation.ts  client-authorization.test.ts  client-authorization.ts  client-config.test.ts  client-config.ts  clipboard.test.ts  clipboard.ts  display.test.ts  display.ts  dom-contract.test.ts  download.test.ts  download.ts  hmr-lifecycle.test.ts  hmr-lifecycle.ts  input.test.ts  input.ts  local-player.test.ts  local-player.ts  main.ts  protocol.test.ts  protocol.ts  style.css  ui.test.ts  ui.ts  worker-lifecycle.test.ts  worker-lifecycle.ts  worker.ts
world/: Cargo.toml
world-service/: Cargo.toml
world-service/src/: automation_fixture.rs  edits.rs  generation_limiter.rs  lib.rs  presence.rs  server.rs  storage_benchmark.rs  traffic.rs
world-terrain-diffusion/: Cargo.toml  UPSTREAM_LICENSE
world-terrain-diffusion/fixtures/: README.md  base-config.json  coarse-config.json  decoder-config.json  pipeline-data.json
world-terrain-diffusion/src/: lib.rs
world-terrain-diffusion/src/metal/: mod.rs  model.rs  rng.rs  scheduler.rs  synthetic_map.rs
world/benches/: world.rs
world/src/: atlas.rs  binary_mesh.rs  cave.rs  celestial.rs  chunk.rs  codec.rs  composition.rs  edit.rs  feature.rs  generation.rs  lib.rs  lod.rs  macro_composer.rs  material.rs  mesh.rs  protocol.rs  route.rs  source.rs  visibility.rs
world/tests/: procedural_v16_golden.rs
(+157 files in other folders)
