# Virtual workspace: portable game/world logic, a web-free WGPU renderer, and the browser WASM leaf.
[workspace]
members = ["core", "world", "render", "shell"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
allow_attributes_without_reason = "deny"
dbg_macro = "deny"
expect_used = "deny"
multiple_unsafe_ops_per_block = "deny"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[profile.bench]
debug = true
