# Virtual workspace: portable game/world logic, a web-free WGPU renderer, and the browser WASM leaf.
[workspace]
members = [
  "bots",
  "client-config",
  "core",
  "world",
  "runtime",
  "render",
  "shell",
  "world-terrain-diffusion",
  "world-service",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.97"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
allow_attributes_without_reason = "deny"
dbg_macro = "deny"
expect_used = "deny"
multiple_unsafe_ops_per_block = "deny"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

# Retain useful source locations while avoiding full dependency debug information in local builds.
# The latter does not help us debug workspace code and makes WASM binding/link steps needlessly large.
[profile.dev]
debug = 1

[profile.dev.package."*"]
debug = false

# Browser gameplay executes a substantial Rust renderer, streamer, mesher, and simulation inside
# WASM. Cargo's unoptimized dev profile is useful for debugging individual instructions but is far
# too slow for representative play. `vp dev` uses this incremental profile; the benchmark harness
# can still select plain `debug` explicitly when measuring the optimization boundary.
[profile.wasm-dev]
inherits = "dev"
opt-level = 2
debug = 1
incremental = true
codegen-units = 16
debug-assertions = false
overflow-checks = false

[profile.wasm-dev.package."*"]
opt-level = 3
debug = false

# Native ML kernels benefit materially from optimizing for throughput instead of WASM size.
[profile.worldgen]
inherits = "release"
opt-level = 3

# `vp dev` rebuilds the native authority after edits to world/service/provider code. Keep third-party
# numerical and networking crates optimized and cached, but compile frequently edited workspace crates
# incrementally without whole-program LTO. Production diagnostics continue to use `worldgen` above.
[profile.worldgen-dev]
inherits = "dev"
opt-level = 1
debug = 1
incremental = true
codegen-units = 256

[profile.worldgen-dev.package."*"]
opt-level = 3
debug = false

# Chunk composition is CPU-heavy and runs concurrently for many clients. Optimizing just this hot
# workspace crate recovers most runtime throughput without restoring whole-program LTO link times.
[profile.worldgen-dev.package.voxels-world]
opt-level = 3
codegen-units = 4
debug-assertions = false
overflow-checks = false

[profile.bench]
debug = true
