[package]
name = "voxels-bots"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow = "1"
futures-util = { version = "0.3", features = ["sink"] }
glam = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.29"
voxels-core = { path = "../core" }
voxels-runtime = { path = "../runtime" }
voxels-world = { path = "../world" }
