[package]
name = "voxels-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[lib]
name = "voxels_core"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.33", features = ["bytemuck", "serde"] }
serde = { version = "1", features = ["derive"] }
