[package]
name = "voxels-render"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[lib]
name = "voxels_render"

[dependencies]
voxels-core = { path = "../core" }
voxels-world = { path = "../world" }
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.33", features = ["bytemuck"] }
hashbrown = "0.16"
wgpu = { version = "=30.0.0", default-features = false, features = ["wgsl"] }
wgpu_text = "=30.0.0"
