[package]
name = "voxels-shell"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[lib]
name = "voxels"
crate-type = ["cdylib", "rlib"]

[dependencies]
voxels-core = { path = "../core" }
voxels-render = { path = "../render" }
voxels-runtime = { path = "../runtime" }
voxels-world = { path = "../world" }
bytemuck = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1"
glam = "0.33"
js-sys = "0.3"
rusqlite = "=0.40.1"
sqlite-wasm-rs = "0.5"
sqlite-wasm-vfs = "0.2"
wasm-bindgen = "=0.2.117"
wasm-bindgen-futures = "0.4"
wgpu = { version = "=30.0.0", default-features = false, features = ["webgpu", "wgsl"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "DedicatedWorkerGlobalScope",
  "OffscreenCanvas",
  "Performance",
  # SQLite's OPFS SAH pool is exclusive per origin. Web Locks elect one owning tab and
  # BroadcastChannel lets every other tab proxy its typed persistence operations to that owner.
  "BroadcastChannel",
  "AbortController",
  "AbortSignal",
  "MessageEvent",
  "WorkerNavigator",
  "WorkerGlobalScope",
]
