[package]
name = "voxels-shell"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[lib]
name = "voxels"
crate-type = ["cdylib", "rlib"]

[dependencies]
voxels-core = { path = "../core" }
voxels-world = { path = "../world" }
glam = "0.33"

[target.'cfg(target_arch = "wasm32")'.dependencies]
voxels-client-config = { path = "../client-config" }
voxels-render = { path = "../render" }
voxels-runtime = { path = "../runtime" }
bytemuck = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "=0.2.117"
wasm-bindgen-futures = "0.4"
wgpu = { version = "=30.0.0", default-features = false, features = ["webgpu", "wgsl"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "DedicatedWorkerGlobalScope",
  "OffscreenCanvas",
  "Performance",
  "BinaryType",
  "CloseEvent",
  "ErrorEvent",
  "Event",
  "MessageEvent",
  "WebSocket",
  "WorkerGlobalScope",
]
