[package]
name = "voxels-world-terrain-diffusion"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[lib]
name = "voxels_world_terrain_diffusion"

[features]
default = []
metal = ["dep:candle-core", "dep:candle-nn", "dep:serde_json"]
download = ["metal", "dep:reqwest"]

[dependencies]
voxels-world = { path = "../world" }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.11.0", features = ["metal"], optional = true }
candle-nn = { version = "0.11.0", features = ["metal"], optional = true }
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "rustls-tls",
], optional = true }
serde_json = { version = "1", optional = true }

[[bin]]
name = "voxels-terrain-diffusion"
path = "src/bin/voxels-terrain-diffusion.rs"
required-features = ["metal", "download"]
